# mausritter-tools

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_character_simple.py  test_hexcrawl.json  test_tableloader.py  test_weather_generator.py
.claude/: claude.md  settings.local.json
brainstorm/: DEPENDENCY_ORDER.md  HEXCRAWL_GENERATOR_DESIGN.md  IMPLEMENTATION_PLAN.md  README.md  ROADMAP.md  RULES_AUDIT_REPORT.md  features.md  generators.md  ideas.md  questions.md  tools.md
data/core/: adventure_hooks.json  adventure_seeds.json  (+62 more)
docs/: API_ENDPOINTS.md  DATABASE_SCHEMA.sql  KNOWN_ISSUES.md  MANUAL.md  UI_WIREFRAMES.md  WEB_ARCHITECTURE.md  WEB_ROADMAP.md
sessions/: README.md  session_001_2025-10-29.md
src/: __init__.py  cli.py
tests/: __init__.py  run_tests_simple.py  test_adventure_generator.py  test_adventure_hook_generator.py  test_character_generator.py  test_creature_variant_generator.py  test_dice.py  test_dungeon_generator.py  test_hex_generator.py  test_hexcrawl_generator.py  test_hireling_generator.py  test_npc_generator.py  test_reaction_generator.py  test_rumor_generator.py  test_settlement_generator.py  test_spell_generator.py  test_tavern_generator.py  test_treasure_generator.py  test_weather_generator.py
web-backend/: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  requirements.txt
web-frontend/: .env.example  .env.local.example  .vercelignore  README.md  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
(+111 files in other folders)
